macros/tests/ui/multipart_on_enum.stderr
error: Unsupported shape `enum`. Expected struct with named fields.
 --> tests/ui/multipart_on_enum.rs:3:10
  |
3 | #[derive(TryFromMultipart)]
  |          ^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `TryFromMultipart` (in Nightly builds, run with -Z macro-backtrace for more info)
