macros/tests/ui/multipart_on_enum.rs
use axum_typed_multipart::TryFromMultipart;

#[derive(TryFromMultipart)]
enum Data {
    Variant,
}

fn main() {}
